--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Inveni</string>
     <string name="tab_text_1">LOST</string>
     <string name="tab_text_2">FOUND</string>
+    <string name="title_text">TITLE:</string>
+    <string name="date_text">DATE:</string>
 
     <string name="image_content_description">IMAGE</string>
 </resources>
