--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="title_text">TITLE:</string>
     <string name="date_text">DATE:</string>
 
+    <string name="menu_found_edit">Edit</string>
+    <string name="menu_found_gto">Given to owner</string>
+    <string name="menu_found_gtlpo">Given to lost property office</string>
+
     <string name="image_content_description">IMAGE</string>
 </resources>
