--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,23 @@
     <string name="contact_email">Email:</string>
     <string name="contact_phone">Phone number:</string>
     <string name="contact_country">Country:</string>
+
+    <string name="create_title">Title:</string>
+    <string name="create_desc">Description:</string>
+    <string name="create_lat">Latitude:</string>
+    <string name="create_lon">Longitude:</string>
+    <string name="create_gps">Get GPS-Coordinates</string>
+    <string name="create_pic">Select picture</string>
+    <string name="create">CREATE</string>
+
+    <string name="search_tags">Search tags:</string>
+    <string name="search_rad">Search radius (km):</string>
+    <string name="search_gps">Get position from Maps</string>
+    <string name="search">Search</string>
+
+    <string name="slp">Search lost property</string>
+    <string name="fp">Found property</string>
+    <string name="settings">Settings</string>
+    <string name="contact_owner">Contact finder</string>
+    <string name="report">Report</string>
 </resources>
