--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,10 @@
     <string name="tab_text_2">FOUND</string>
     <string name="title_text">TITLE:</string>
     <string name="date_text">DATE:</string>
-
     <string name="menu_found_edit">Edit</string>
     <string name="menu_found_gto">Given to owner</string>
     <string name="menu_found_gtlpo">Given to lost property office</string>
-
     <string name="image_content_description">IMAGE</string>
-
     <string name="contact_name">Name:</string>
     <string name="contact_family_name">Given name:</string>
     <string name="contact_street">Street:</string>
@@ -19,7 +16,6 @@
     <string name="contact_email">Email:</string>
     <string name="contact_phone">Phone number:</string>
     <string name="contact_country">Country:</string>
-
     <string name="create_title">Title:</string>
     <string name="create_desc">Description:</string>
     <string name="create_lat">Latitude:</string>
@@ -27,15 +23,14 @@
     <string name="create_gps">Get GPS-Coordinates</string>
     <string name="create_pic">Select picture</string>
     <string name="create">CREATE</string>
-
     <string name="search_tags">Search tags:</string>
     <string name="search_rad">Search radius (km):</string>
     <string name="search_gps">Get position from Maps</string>
     <string name="search">Search</string>
-
     <string name="slp">Search lost property</string>
     <string name="fp">Found property</string>
     <string name="settings">Settings</string>
     <string name="contact_owner">Contact finder</string>
     <string name="report">Report</string>
+    <string name="search_date">Date:</string>
 </resources>
